--- a/gradle.properties
+++ b/gradle.properties
@@ -7,6 +7,10 @@
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
 org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
+# Use Android Studio's bundled Java (JetBrains Runtime 21)
+# NOTE: This is machine-specific and will break JitPack/CI builds
+# Commented out for publishing - uncomment only for local development
+# org.gradle.java.home=/Applications/Android Studio.app/Contents/jbr/Contents/Home
 # Disable toolchain auto-provisioning to use system Java
 org.gradle.java.installations.auto-detect=true
 org.gradle.java.installations.auto-download=false
