--- a/jitpack.yml
+++ b/jitpack.yml
@@ -1,7 +1,8 @@
-# configuration file for building snapshots and releases with jitpack.io
 jdk:
-  - openjdk11
-
+  - openjdk17
+before_install:
+  - sdk install java 17.0.7-open
+  - sdk use java 17.0.7-open
 # For multi-module projects, specify the subproject
 subprojects:
   - andorid-autopay-demo-lib
