--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,36 +5,36 @@ plugins {
 }
 
 android {
-    namespace 'com.example.upi_autopay_sdk'
+    namespace = 'com.example.upi_autopay_sdk'
     compileSdk {
         version = release(36)
     }
 
     defaultConfig {
-        applicationId "com.example.upi_autopay_sdk"
-        minSdk 24
-        targetSdk 36
-        versionCode 1
-        versionName "1.0"
+        applicationId = "com.example.upi_autopay_sdk"
+        minSdk = 24
+        targetSdk = 36
+        versionCode = 1
+        versionName = "1.0"
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
         release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            minifyEnabled = false
+            proguardFiles(getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro')
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
+        sourceCompatibility = JavaVersion.VERSION_11
+        targetCompatibility = JavaVersion.VERSION_11
     }
     kotlinOptions {
         jvmTarget = '11'
     }
     buildFeatures {
-        compose true
+        compose = true
     }
 }
 
