--- a/gradle.properties
+++ b/gradle.properties
@@ -7,6 +7,9 @@
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
 org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
+# Workaround for Gradle 8.13 bug with tasks command
+org.gradle.daemon=true
+org.gradle.parallel=false
 # Use Android Studio's bundled Java (JetBrains Runtime 21)
 # NOTE: This is machine-specific and will break JitPack/CI builds
 # Commented out for publishing - uncomment only for local development
