--- a/andorid-autopay-demo-lib/build.gradle
+++ b/andorid-autopay-demo-lib/build.gradle
@@ -7,9 +7,7 @@ plugins {
 
 android {
     namespace = 'com.dec.andorid_autopay_demo_lib'
-    compileSdk {
-        version = release(36)
-    }
+    compileSdk = 34
 
     defaultConfig {
         minSdk = 24
