--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,14 +6,12 @@ plugins {
 
 android {
     namespace = 'com.example.upi_autopay_sdk'
-    compileSdk {
-        version = release(36)
-    }
+    compileSdk = 34
 
     defaultConfig {
         applicationId = "com.example.upi_autopay_sdk"
         minSdk = 24
-        targetSdk = 36
+        targetSdk = 34
         versionCode = 1
         versionName = "1.0"
 
