--- a/andorid-autopay-demo-lib/build.gradle
+++ b/andorid-autopay-demo-lib/build.gradle
@@ -22,6 +22,11 @@ android {
             consumerProguardFiles('proguard-rules.pro', 'consumer-rules.pro')
         }
     }
+    
+    lintOptions {
+        abortOnError = false
+        checkReleaseBuilds = false
+    }
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_17
         targetCompatibility = JavaVersion.VERSION_17
