--- a/andorid-autopay-demo-lib/src/main/AndroidManifest.xml
+++ b/andorid-autopay-demo-lib/src/main/AndroidManifest.xml
@@ -12,6 +12,16 @@
             android:name=".DetailsActivity"
             android:exported="false"
             android:theme="@android:style/Theme.Material.Light.NoActionBar" />
+        
+        <activity
+            android:name=".EditAccountActivity"
+            android:exported="false"
+            android:theme="@android:style/Theme.Material.Light.NoActionBar" />
+        
+        <activity
+            android:name=".MandateStatusActivity"
+            android:exported="false"
+            android:theme="@android:style/Theme.Material.Light.NoActionBar" />
     </application>
 
 </manifest>
