Enhanced DNS connectivity handling for UnknownHostException
- Added DNS connectivity test to diagnose resolution failures
- Enhanced retry logic with intelligent delays based on exception type:
  * UnknownHostException: 5s delay (DNS issues need more time)
  * SocketTimeoutException: 3s delay (medium timeout)
  * Other exceptions: 2s delay (standard)
- Added DNS test before retries for UnknownHostException
- Added alternative DNS connectivity test (Google DNS)
- Version bumped to 1.2.8

This should resolve 'Unable to resolve host api.decentro.tech' errors

--- a/andorid-autopay-demo-lib/build.gradle
+++ b/andorid-autopay-demo-lib/build.gradle
@@ -73,7 +73,7 @@ afterEvaluate {
             maven(MavenPublication) {
                 groupId = 'com.github.akhilmishra-FE'
                 artifactId = 'SDK-Andorid-Testing'
-                version = project.findProperty('VERSION_NAME') ?: '1.2.7' // Redirect to merchant app ONLY for SUCCESS and FAILED statuses
+                version = project.findProperty('VERSION_NAME') ?: '1.2.8' // Enhanced DNS connectivity handling for UnknownHostException
                 
                 // Publish the AAR artifact - this automatically includes AAR and sources JAR
                 from components.release
