--- a/gradle.properties
+++ b/gradle.properties
@@ -10,12 +10,11 @@ org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 # Workaround for Gradle 8.13 bug with tasks command
 org.gradle.daemon=true
 org.gradle.parallel=false
-# Use Android Studio's bundled Java (JetBrains Runtime 21)
-# NOTE: This is machine-specific and will break JitPack/CI builds
-# Commented out for publishing - uncomment only for local development
-# org.gradle.java.home=/Applications/Android Studio.app/Contents/jbr/Contents/Home
-# Disable toolchain auto-provisioning to use system Java
-org.gradle.java.installations.auto-detect=true
+# Force Gradle to use Android Studio's bundled Java 17/21 (compatible with Gradle 8.9)
+# This fixes "Unsupported class file major version 69" error
+org.gradle.java.home=/Applications/Android Studio.app/Contents/jbr/Contents/Home
+# Disable toolchain auto-provisioning to use specified Java
+org.gradle.java.installations.auto-detect=false
 org.gradle.java.installations.auto-download=false
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. For more details, visit
@@ -31,3 +30,15 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+
+# GitLab Maven Publishing Configuration
+# Version of the SDK (update this for each release)
+VERSION_NAME=1.0.0
+
+# GitLab Project ID for decentro-autopay-android
+# Find this in GitLab: Settings > General > Project ID
+GITLAB_PROJECT_ID=77552064
+
+# GitLab Private Token (DO NOT COMMIT THIS - Add to local gradle.properties or use environment variable)
+# Generate token in GitLab: User Settings > Access Tokens > Create with api & write_repository scope
+# GITLAB_PRIVATE_TOKEN=your_token_here
