--- a/andorid-autopay-demo-lib/build.gradle
+++ b/andorid-autopay-demo-lib/build.gradle
@@ -1,7 +1,20 @@
 plugins {
     alias(libs.plugins.android.library)
     alias(libs.plugins.kotlin.android)
+    alias(libs.plugins.compose.compiler)
     id 'maven-publish'
+}
+
+// Load sensitive properties from local.properties
+def localProperties = new Properties()
+def localPropertiesFile = rootProject.file('local.properties')
+if (localPropertiesFile.exists()) {
+    localPropertiesFile.withInputStream { localProperties.load(it) }
+}
+
+// Helper function to get property with fallback
+def getPropertyOrDefault(Properties props, String key, String defaultValue) {
+    return props.getProperty(key) ?: project.findProperty(key) ?: System.getenv(key) ?: defaultValue
 }
 
 android {
@@ -13,6 +26,12 @@ android {
 
         testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles("consumer-rules.pro")
+        
+        // Inject sensitive data into BuildConfig (secured, not exposed in AAR)
+        buildConfigField "String", "DECENTRO_BASE_URL", "\"${getPropertyOrDefault(localProperties, 'DECENTRO_BASE_URL', 'https://api.decentro.tech/')}\""
+        buildConfigField "String", "DECENTRO_CLIENT_ID", "\"${getPropertyOrDefault(localProperties, 'DECENTRO_CLIENT_ID', '')}\""
+        buildConfigField "String", "DECENTRO_CLIENT_SECRET", "\"${getPropertyOrDefault(localProperties, 'DECENTRO_CLIENT_SECRET', '')}\""
+        buildConfigField "String", "DECENTRO_PROVIDER_ID", "\"${getPropertyOrDefault(localProperties, 'DECENTRO_PROVIDER_ID', '')}\""
     }
 
     buildTypes {
@@ -37,10 +56,7 @@ android {
     }
     buildFeatures {
         compose = true
-    }
-    
-    composeOptions {
-        kotlinCompilerExtensionVersion = "1.5.4"
+        buildConfig = true  // Enable BuildConfig generation for secure config injection
     }
 }
 
@@ -66,22 +82,22 @@ dependencies {
     androidTestImplementation libs.androidx.espresso.core
 }
 
-// Maven publishing configuration
+// Maven publishing configuration for GitLab
 afterEvaluate {
     publishing {
         publications {
             maven(MavenPublication) {
-                groupId = 'com.github.akhilmishra-FE'
-                artifactId = 'SDK-Andorid-Testing'
-                version = project.findProperty('VERSION_NAME') ?: '1.3.2' // Fixed redirect with moveTaskToBack as primary approach
+                groupId = 'com.decentro.autopay'
+                artifactId = 'upi-autopay-sdk'
+                version = getPropertyOrDefault(localProperties, 'VERSION_NAME', '1.0.0')
                 
                 // Publish the AAR artifact - this automatically includes AAR and sources JAR
                 from components.release
                 
                 pom {
-                    name = 'SDK-Andorid-Testing'
+                    name = 'UPI AutoPay SDK'
                     description = 'UPI AutoPay SDK for Android - A library for integrating UPI AutoPay functionality with merchant applications'
-                    url = 'https://github.com/akhilmishra-FE/SDK-Andorid-Testing'
+                    url = 'https://gitlab.com/decentro1/decentro-autopay-android'
                     
                     licenses {
                         license {
@@ -92,14 +108,29 @@ afterEvaluate {
                     
                     developers {
                         developer {
-                            id = 'akhilmishra-FE'
-                            name = 'Akhil Mishra'
+                            id = 'decentro'
+                            name = 'Decentro'
                         }
                     }
                 }
             }
         }
         repositories {
+            maven {
+                name = "GitLab"
+                url = uri("https://gitlab.com/api/v4/projects/${getPropertyOrDefault(localProperties, 'GITLAB_PROJECT_ID', '77552064')}/packages/maven")
+                
+                credentials(HttpHeaderCredentials) {
+                    name = "Private-Token"
+                    value = getPropertyOrDefault(localProperties, 'GITLAB_PRIVATE_TOKEN', '')
+                }
+                
+                authentication {
+                    header(HttpHeaderAuthentication)
+                }
+            }
+            
+            // Keep mavenLocal for local testing
             mavenLocal()
         }
     }
