Fixed Deeplink app issue

--- a/andorid-autopay-demo-lib/src/main/AndroidManifest.xml
+++ b/andorid-autopay-demo-lib/src/main/AndroidManifest.xml
@@ -4,6 +4,42 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES" />
+    
+    <!-- Queries for UPI apps (Android 11+ requirement) -->
+    <queries>
+        <!-- Intent-based queries for UPI -->
+        <intent>
+            <action android:name="android.intent.action.VIEW" />
+            <data android:scheme="upi" />
+        </intent>
+        <intent>
+            <action android:name="android.intent.action.VIEW" />
+            <data android:scheme="phonepe" />
+        </intent>
+        <intent>
+            <action android:name="android.intent.action.VIEW" />
+            <data android:scheme="gpay" />
+        </intent>
+        <intent>
+            <action android:name="android.intent.action.VIEW" />
+            <data android:scheme="paytm" />
+        </intent>
+        
+        <!-- Specific UPI app packages -->
+        <package android:name="com.phonepe.app" />
+        <package android:name="com.google.android.apps.nfc.payment" />
+        <package android:name="com.dreamplug.androidapp" />
+        <package android:name="net.one97.paytm" />
+        <package android:name="in.org.npci.upiapp" />
+        <package android:name="com.mobikwik_new" />
+        <package android:name="com.freecharge.android" />
+        <package android:name="com.amazon.mShop.android.shopping" />
+        <package android:name="com.csam.icici.bank.imobile" />
+        <package android:name="com.axis.mobile" />
+        <package android:name="com.sbi.upi" />
+        <package android:name="com.whatsapp" />
+    </queries>
 
     <application>
         <activity
